# curso_extensao_unibra_07_2025_1

./: .env  README.md  pyproject copy.toml  pyproject.toml
.github/workflows/: check-branch.yml
apps/core/: constants.py  models.py
apps/customers/: models.py  urls.py
apps/customers/migrations/: 0001_initial.py
apps/login/: forms.py  urls.py  views.py
apps/todo/: models.py  urls.py  views.py
apps/todo/migrations/: 0001_initial.py
conf/: settings.py  urls.py
database/: unibra.sqlite3
docs/curso git/: style.css:Zone.Identifier
fixtures/curso git/: index.html  style.css
templates/: base.html
templates/login/: base.html
templates/todo/: dashboard.html
