[project]
name = "curso-extensao-unibra-07-2025-1"
version = "0.1.0"
description = "Curso de extensão Unibra. 07-2025. Projeto 1"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-extensions>=4.1",
    "ipython>=9.4.0",
    "django-environ>=0.12.0",
    "psycopg2-binary>=2.9.10",
]
[dependency-groups]
prod = [
]
dev = [
    "ruff",
    "black",
]
test = [
]

[tool.ruff]
line-length = 130
fix = true
show-fixes = true
indent-width = 4
select = [
    "ASYNC",
    "A",
    "ANN",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "FIX",
    "I",
    "ICN",
    "ISC",
    "Q",
    "RET",
    "RSE",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TC",
    "TD",
    "TRY",
    "UP",
    "W",
    "YTT",
    "RUF",
    "N",
]
ignore = [
  "T201",
  "ANN401",
  "Q000",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.ruff.isort]
known-first-party = ["apps"]
force-sort-within-sections = true
combine-as-imports = true

[tool.black]
line-length = 130
target-version = ["py313"]
skip-string-normalization = false